--- a/index.html
+++ b/index.html
@@ -2,78 +2,40 @@
 <html>
   <head>
     <title>Calculator</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <script src="app.js">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
   <body>
-    <div>
-      <div id="field">
-      </div>
-      <div class="row">
-        <div class="col-xs-4">
-          <button type="button" value="Clear">Clear</button>
-        </div>
-        <div class="col-xs-5">
-          <button type="button" value="Backspace">Backspace</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="/">&‌divide;</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-3">
-          <button type="button" value="7">7</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="8">8</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="9">9</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="*">x</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-3">
-          <button type="button" value="4">4</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="5">5</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="6">6</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="-">-</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-3">
-          <button type="button" value="1">1</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="2">2</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="3">3</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value="+">+</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-3">
-          <button type="button" value="0">0</button>
-        </div>
-        <div class="col-xs-3">
-          <button type="button" value=".">.</button>
-        </div>
-        <div class="col-xs-6">
-          <button type="button" value="=">=</button>
-        </div>
-      </div>
+    <h1 class="text-center">Calculator</h1>
+    <div class="text-center" id="field">
+      <span id="total"></span>
     </div>
+
+    <div class="text-center" id="calculator">
+      <a id="clear" class="btn btn-danger">Clear</a>
+      <a id="backspace" class="btn btn-danger">Backspace</a>
+      <br>
+      <a id="seven" class="btn btn-primary">7</a>
+      <a id="eight" class="btn btn-primary">8</a>
+      <a id="nine" class="btn btn-primary">9</a>
+      <a id="divide" class="btn btn-primary">/</a>
+      <br>
+      <a id="four" class="btn btn-primary">4</a>
+      <a id="five" class="btn btn-primary">5</a>
+      <a id="six" class="btn btn-primary">6</a>
+      <a id="times" class="btn btn-primary">*</a>
+      <br>
+      <a id="one" class="btn btn-primary">1</a>
+      <a id="two" class="btn btn-primary">2</a>
+      <a id="three" class="btn btn-primary">3</a>
+      <a id="minus" class="btn btn-primary">-</a>
+      <br>
+      <a id="zero" class="btn btn-primary">0</a>
+      <a id="point" class="btn btn-primary">.</a>
+      <a id="equals" class="btn btn-primary">=</a>
+      <a id="plus" class="btn btn-primary">+</a>
+    </div>
+    <script src="app.js"></script>
   </body>
 </html>
