Make more concise

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
       <a id="clear" class="btn btn-danger">Clear</a>
       <a id="backspace" class="btn btn-danger">Backspace</a>
       <br>
-      <a id="seven" class="btn btn-primary">7</a>
-      <a id="eight" class="btn btn-primary">8</a>
-      <a id="nine" class="btn btn-primary">9</a>
-      <a id="divide" class="btn btn-primary">/</a>
+      <a data-value="7" id="seven" class="btn btn-primary">7</a>
+      <a data-value="8" id="eight" class="btn btn-primary">8</a>
+      <a data-value="9" id="nine" class="btn btn-primary">9</a>
+      <a data-value="/" id="divide" class="btn btn-primary">/</a>
       <br>
-      <a id="four" class="btn btn-primary">4</a>
-      <a id="five" class="btn btn-primary">5</a>
-      <a id="six" class="btn btn-primary">6</a>
-      <a id="times" class="btn btn-primary">*</a>
+      <a data-value="4" id="four" class="btn btn-primary">4</a>
+      <a data-value="5" id="five" class="btn btn-primary">5</a>
+      <a data-value="6" id="six" class="btn btn-primary">6</a>
+      <a data-value="*" id="times" class="btn btn-primary">*</a>
       <br>
-      <a id="one" class="btn btn-primary">1</a>
-      <a id="two" class="btn btn-primary">2</a>
-      <a id="three" class="btn btn-primary">3</a>
-      <a id="minus" class="btn btn-primary">-</a>
+      <a data-value="1" id="one" class="btn btn-primary">1</a>
+      <a data-value="2" id="two" class="btn btn-primary">2</a>
+      <a data-value="3" id="three" class="btn btn-primary">3</a>
+      <a data-value="-" id="minus" class="btn btn-primary">-</a>
       <br>
-      <a id="zero" class="btn btn-primary">0</a>
-      <a id="point" class="btn btn-primary">.</a>
-      <a id="equals" class="btn btn-primary">=</a>
-      <a id="plus" class="btn btn-primary">+</a>
+      <a data-value="0" id="zero" class="btn btn-primary">0</a>
+      <a data-value="." id="point" class="btn btn-primary">.</a>
+      <a data-value="=" id="equals" class="btn btn-warning">=</a>
+      <a data-value="+" id="plus" class="btn btn-primary">+</a>
     </div>
     <script src="app.js"></script>
   </body>
